Changes from development of testbot

--- a/deploy/sample.cnf
+++ b/deploy/sample.cnf
@@ -7,6 +7,8 @@ string_mask = nombstr # permitted characters
 distinguished_name = req_distinguished_name
 
 [ req_distinguished_name ]
+# The following fields are used for prompting the user
+# when NOT in batch mode. You can leave them as-is
 # Variable name   Prompt string
 0.organizationName = Organization Name (company)
 organizationalUnitName = Organizational Unit Name (department, division)
@@ -20,22 +22,19 @@ countryName_max = 2
 commonName = Common Name (hostname, IP, or your name)
 commonName_max = 64
 
-
-#-------------------Edit this section------------------------------
-# Commented out sections beginning with [PG] for use by genPlaygroundCert.py
-# Edit with appropriate values, but leave commented out!
-
+# The following "defaults" are used in batch mode. 
+emailAddress_default    = # Your email address here
 countryName_default     = US
 stateOrProvinceName_default = Maryland
 localityName_default        = Baltimore
-0.organizationName_default  = Playground
-organizationalUnitName_default  = # Insert Team Name Here
+0.organizationName_default  = EN600424
+organizationalUnitName_default  = PETF
+companyName_default             = # Your student or company name here
 
-# [PG] Base = # Insert Semester Code Here
-# [PG] TeamCode = # Insert Team Code Here
-# [PG] CA = # Insert fully qualified path to CA certificate (blank for self-signed)
-# [PG] CAkey = # Insert fully qualified path to CA key (blank for self-signed)
-
-#--------------------DO NOT EDIT if using genPlaygroundCert.py-----
+#---- If Using Playground BLOCKs, No Need for this ----
 #commonName_default          = filled in by script#
 
+[ playground ]
+BLOCK1 = 20164
+BLOCK2 = 0
+BLOCK3 = 0
